# shakeop

./: .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  main.py  pyproject.toml
.claude/handovers/: 2026-03-07_1844.md  2026-03-07_2000.md  2026-03-07_2059.md
assets/templates/clear_result/: clear_result.npy
assets/templates/text/: baito.npy
assets/templates/wave/: digit_1.npy  digit_2.npy  digit_3.npy  digit_4.npy  digit_5.npy  extra_wave.npy  wave_text.npy
assets/templates/works_over/: works_over.npy
docs/: BUGFIX_STANDARD.md  DESIGN_STANDARD.md  REQUIREMENTS_STANDARD.md  REVIEW_CRITERIA.md  TECH_STACK.md  game_rules.md  salmon_run_state_transitions.md
docs/issues/: index.md
docs/issues/B-001_fps_overcounting/: requirements.md
docs/issues/F-001_baito_text_recognition/: design.md  requirements.md
experiments/exp_001_baito_text_recognition/: README.md  main.py  template_hash8.npy
experiments/exp_002_video_baito_text_recognition/: README.md  main.py
experiments/exp_003_gui_recognition_viewer/: README.md  capture_worker.py  fps_counter.py  log_writer.py  main.py  main_window.py  recognition_plugin.py  recognition_worker.py
experiments/exp_004_wave_number_recognition/: README.md  main.py  wave_recognizer.py
experiments/exp_005_extra_wave_recognition/: README.md  extra_wave_recognizer.py  main.py
experiments/exp_006_works_over_recognition/: README.md  main.py  works_over_recognizer.py
experiments/exp_007_clear_result_recognition/: README.md  clear_result_recognizer.py  main.py
shared/recognition/: __init__.py  phash.py
(+91 files in other folders)
