[project]
name = "shakeop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "onnxruntime>=1.17",
    "opencv-contrib-python>=4.9",
    "pyside6>=6.6",
    "tomli-w>=1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.3",
]
